<resources>
    <string name="class_fixed_appbar_behaviour" translatable="false">com.foodtogo.rider.customview.FixedAppBarLayoutBehavior</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name">Order Notification</string>
    <string name="app_name">FoodToGo - Rider</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="update_success">Updated Successfully1</string>
    <string name="no_data">No Data Found!</string>
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>
    <string name="direction_api_key">AIzaSyArw2KwkwWAejLacefKNQdtfdyLX-3KOUc</string>
    <string name="screen_login">Login</string>
    <string name="edit_email">Email</string>
    <string name="edit_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="warning_empty_email">Please enter valid Email</string>
    <string name="warning_empty_password"> Please enter value in the password field</string>
    <string name="warning_invalid_email">Please enter valid Email</string>
    <string name="location_getting_failed">Getting location... Please wait</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="warning_incorrect_password">Password should contain atleast 6 to 10 characters</string>
    <string name="warning">Warning</string>
    <string name="network_error">Network Error : No Data Received.</string>
    <string name="time_out_error">Timeout.</string>
    <string name="loading_wait">Loading… Please wait.</string>
    <string name="delivery_app">Delivery App</string>
    <string name="todo">TODO</string>
    <string name="login">LOGIN</string>
    <string name="user_name">UserName</string>
    <string name="email_id">Email</string>
    <string name="password">Password</string>
    <string name="go">GO</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="order_id">Order Id</string>
    <string name="ordered_on">Ordered On</string>
    <string name="total_amount">TotalAmount</string>
    <string name="receivable_amount">Receivable Amount</string>
    <string name="view_invoice">View Invoice</string>
    <string name="dashboard">Dashboard</string>
    <string name="total_orders">Total Orders</string>
    <string name="count_value">0</string>
    <string name="new_order">New Orders</string>
    <string name="processing_order">Processing Orders</string>
    <string name="delivered_order">Delivered Orders</string>
    <string name="order_status">Order Status</string>
    <string name="processing">Processing</string>
    <string name="pending">Pending</string>
    <string name="failed">Failed</string>
    <string name="user_email">UserEmail</string>
    <string name="commission_transaction">Commission transaction</string>
    <string name="payment_settings">Payment settings</string>
    <string name="commission_tracking">Commission tracking</string>
    <string name="assigned_order">Assigned Orders</string>
    <string name="earning_report">Earning Reports</string>
    <string name="order_tracking">Order Tracking</string>
    <string name="order_history">Order History</string>
    <string name="sign_out">Sign Out</string>
    <string name="track">Track</string>
    <string name="delivered_on">Delivered On:</string>
    <string name="payment_type">Payment Type:</string>
    <string name="payment_type_without">Payment Type</string>
    <string name="check_delivered_order">Check your Delivered Order</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="bind_total_amount">%1$s %2$s</string>
    <string name="reason">Reason</string>
    <string name="reason_reject">Reason for rejecting order</string>
    <string name="enter_reason_reject">Please enter reason for rejection</string>
    <string name="forgotPassword">Forgot Your Password?</string>
    <string name="noWorries">No worries! Enter your email</string>
    <string name="emailId">Email</string>
    <string name="availableStatus">Available status</string>
    <string name="please_refer_mail">Please refer your registered email to get password</string>
    <string name="first_name">First name</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="change_password">Change Password</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="order_limit">Order limit</string>
    <string name="order_wallet">Wallet Points</string>
    <string name="enter_order_limit">Enter order limit.(ex:50)</string>
    <string name="working_hour">Working Hours</string>
    <string name="update">Update</string>
    <string name="select_photo_from">Select photo from</string>
    <string name="turn_on_gps">Please turn on GPS to get current location</string>
    <string name="select_image">Please select image</string>
    <string name="fill_first_name">Please fill the first name</string>
    <string name="fill_last_name">Please fill the last name</string>
    <string name="select_vehicle_type">Please select vehicle type</string>
    <string name="fill_order_limit">Please fill order limit</string>
    <string name="fill_phone_number">Please fill your valid  phone number</string>
    <string name="fill_email_id">Please fill your valid email</string>
    <string name="select_license">Please select driving license</string>
    <string name="select_address_proof">Please select address proof</string>
    <string name="response_time">Response Time</string>
    <string name="base_fare">Base Fare</string>
    <string name="km_hr_charge">Charge  </string>
    <string name="bind_charge_fare_type">%1$s \u0020 %2$s</string>
    <string name="label_otp">Otp!</string>
    <string name="enter_otp">Enter One time password that received to Customer?</string>
    <string name="proof_add">Driving license and Address proof need to add</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_confirm_password">Confirm Password</string>
    <string name="fill_password">Please fill password field</string>
    <string name="sunday">Sunday</string>
    <string name="unavailable">Unavailable</string>
    <string name="from">From</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="to">To</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="to_time_msg">To time must be greater than From time</string>
    <string name="fill_from_to_date">Please fill from and to date of</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="retry">Retry</string>
    <string name="no_order_found">No Orders Found!</string>
    <string name="enter_order_id">Enter order id</string>
    <string name="fill_from_date">Please fill from date</string>
    <string name="fill_to_date">Please fill to date</string>
    <string name="bind_delivered_total_amount">%1$s %2$s</string>
    <string name="bind_delivered_date">%1$s \u0020 %2$s</string>
    <string name="refresh">Refresh</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="charge">Charge</string>
    <string name="total">Total :</string>
    <string name="total_earning_amount">Total earning amount</string>
    <string name="customer_details">Customer Details</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="order_amount">Order Amount</string>
    <string name="wallet">Wallet</string>
    <string name="delivery_charge">Delivery charge</string>
    <string name="total_label">Total</string>
    <string name="qty">Qty:</string>
    <string name="include">Include:</string>
    <string name="invoice_report">Invoice Report</string>
    <string name="title_activity_track_order_maps">Map</string>
    <string name="new_order_label">New Order</string>
    <string name="order_accepted">Order Accepted</string>
    <string name="preapre_deliver">Prepare to deliver</string>
    <string name="dispatched">Dispatched</string>
    <string name="started">Started</string>
    <string name="arrived">Arrived</string>
    <string name="order_on_way">Your order is on the way</string>
    <string name="enjoy_food">Enjoy your food within short time</string>
    <string name="track_order">Location</string>
    <string name="delivered">Delivered</string>
    <string name="order_colon_id">Order id</string>
    <string name="payment_method">Payment method</string>
    <string name="call">Call\u0020%s?</string>
    <string name="mobile_call">Mobile network call not available</string>
    <string name="enter_reason">Please enter reason</string>
    <string name="select_status">Please select delivery status</string>
    <string name="total_commission_amount">Total Commission Amount</string>
    <string name="colon">:</string>
    <string name="balance_amount_receive">Balance amount to receive</string>
    <string name="total_order_amount">Total Order Amount</string>
    <string name="total_received_amount">Total Received Amount</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="received_amount">Received Amount</string>
    <string name="balance_to_pay">Balance Amount to pay</string>
    <string name="check_transaction">Check your transactions</string>
    <string name="net_banking">NetBanking</string>
    <string name="enter_account_number">Enter account number</string>
    <string name="account_number">Account number</string>
    <string name="enter_bank_name">Enter bank name</string>
    <string name="bank_name">Bank name</string>
    <string name="enter_branch_name">Enter branch name</string>
    <string name="name_account">Account Holder</string>
    <string name="transaction_detail">Transaction Detail</string>
    <string name="paid_date">Paid date</string>
    <string name="paid_amount_us">Paid\namount</string>
    <string name="received_amount_us">Received amount</string>
    <string name="no_record_found">No records found!</string>
    <string name="dollar_zero">$0</string>
    <string name="pay">Pay\u0020%s</string>
    <string name="fill_pay_pal_details">Please fill all the fields in  paypal</string>
    <string name="fill_stripe_details">Please fill all the fields in stripe</string>
    <string name="fill_net_details">Please fill all the fields bank account details</string>
    <string name="publish_detail">Please publish at least one  payment type</string>
    <string name="pay_label">Pay</string>
    <string name="enter_transaction_id">Enter transaction id / Ref.No</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="sign_out_message">Are you sure want to sign out?</string>
    <string name="sign_out_positive">Yes</string>
    <string name="sign_out_negative">No</string>
    <string name="exit_title">Exit</string>
    <string name="exit_message">Are you sure want to exit?</string>
    <string name="exit_positive">Yes</string>
    <string name="exit_negative">No</string>
    <string name="date_range_title">Check Your Delivered Order</string>
    <string name="date_from">From Date</string>
    <string name="date_to">To Date</string>
    <string name="date_go">Go</string>
</resources>