<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll"
        style="@style/dialogBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_range_title" />

        <EditText
            android:id="@+id/etDateFrom"
            android:drawableRight="@drawable/ic_calendar"
            style="@style/etNonEditable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_from" />

        <EditText
            android:id="@+id/etDateTo"
            style="@style/etNonEditable"
            android:drawableRight="@drawable/ic_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_to" />

    </LinearLayout>

    <Button
        style="@style/buttonStyle"
        android:id="@+id/btnPositive"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:layout_gravity="center"
        android:text="@string/date_go"
        app:layout_constraintBottom_toBottomOf="@id/ll"
        app:layout_constraintLeft_toLeftOf="@id/ll"
        app:layout_constraintRight_toRightOf="@id/ll"
        app:layout_constraintTop_toBottomOf="@id/ll" />


</androidx.constraintlayout.widget.ConstraintLayout>