<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll"
        style="@style/dialogBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_title" />

        <TextView
            android:id="@+id/tvMessage"
            style="@style/dialogMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:text="@string/exit_message" />

    </LinearLayout>

    <Button
        style="@style/buttonStyle"
        android:id="@+id/btnPositive"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        app:layout_constraintBottom_toBottomOf="@id/ll"
        app:layout_constraintLeft_toRightOf="@id/btnNegative"
        app:layout_constraintRight_toRightOf="@id/ll"
        app:layout_constraintTop_toBottomOf="@id/ll"
        android:text="@string/exit_positive" />

    <Button
        style="@style/buttonStyle"
        android:id="@+id/btnNegative"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toBottomOf="@id/ll"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="@id/ll"
        app:layout_constraintRight_toLeftOf="@id/btnPositive"
        app:layout_constraintTop_toBottomOf="@id/ll"
        android:text="@string/exit_negative" />

</androidx.constraintlayout.widget.ConstraintLayout>