<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rectangle_bg"
    android:layout_height="230dp">

    <TextView
        android:id="@+id/delivered_order_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/check_delivered_order"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txt_sixteen"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/old_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delivered_order_text">

        <EditText
            android:id="@+id/edt_from_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/from_date"
            android:inputType="date"
            android:textSize="14sp"
            android:autofillHints=""
            tools:targetApi="o" />

        <ImageView
            android:id="@+id/calendar_icon_from"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_calender_old"
            android:layout_marginEnd="20dp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/new_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/old_layout">

        <EditText
            android:id="@+id/edt_to_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:focusable="false"
            android:ems="10"
            android:hint="@string/to_date"
            android:inputType="date"
            android:textSize="14sp"
            android:autofillHints=""
            tools:targetApi="o" />

        <ImageView
            android:id="@+id/calendar_icon_to"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_calender_old"
            android:layout_marginEnd="20dp" />
    </FrameLayout>


    <!-- <View
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="5dp"
         android:layout_marginTop="220dp"
         android:background="@drawable/button_bg" />-->

    <Button
        android:id="@+id/btn_go"
        android:layout_width="130dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_below="@+id/new_layout"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        android:layout_centerHorizontal="true"
        android:text="@string/go"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>