<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_bg">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/close_ic" />

        <EditText
            android:id="@+id/transaction_id"
            android:layout_below="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_transaction_id"
            android:paddingLeft="@dimen/extra_margin"
            android:paddingRight="@dimen/extra_margin"
            android:paddingTop="@dimen/radius_ten"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/radius_ten"
            android:textSize="12sp"
            android:singleLine="true"
            android:background="@drawable/search_bg" />


        <Button
            android:id="@+id/pay_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_bg"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/pay_label"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/extra_margin"
            android:layout_marginBottom="@dimen/extra_margin"
            android:layout_below="@+id/transaction_id"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>